--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="startContainer">
         <h1>Memory Game</span></h1>
         <img id="startImg" src="/img/knight.jpg" alt="Mole" height="150px">
-        <button id="startGame" onclick="window.location.href='/memoryGame.html'">Start Game</button>
+        <button id="startGame" onclick="window.location.href='https://mattneary1.github.io/memoryGame/memoryGame.html'">Start Game</button>
         <footer>
             Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a><br>Music by: <a href ="https://freemusicarchive.org/music/Scott_Holmes/" target="_blank">Scott Holmes</a>
         </footer>
