--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <title>nearyGames - Memory Game</title>
-    <link rel="icon" type="image/x-icon" href="/img/nearyGames.png">
+    <link rel="icon" type="image/x-icon" href="/nearyGames.png">
 </head>
 <body>
     <div id="startContainer">
