--- a/memoryGame.html
+++ b/memoryGame.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <title>nearyGames - Memory Game</title>
-    <link rel="icon" type="image/x-icon" href="/img/nearyGames.png">
+    <link rel="icon" type="image/x-icon" href="nearyGames.png">
 </head>
 <body>
     <h1>Match All <span id="totalToWin">6</span> to Win</h1>
@@ -18,8 +18,7 @@
     <div id="grid"></div>
     
     <footer>
-        Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a><br>Music by: <a href ="https://freemusicarchive.org/music/Scott_Holmes/" target="_blank">Scott Holmes</a><br>
-        <audio src="/audio/Scott Holmes Music - Mellow Lo-Fi.mp3" autoplay controls></audio>
+        Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a><br>
     </footer>
     <script src="memoryGame.js"></script>
 </body>
