--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <img id="startImg" src="knight.jpg" alt="Black chess knight" height="150px">
         <button id="startGame" onclick="window.location.href='https://mattneary1.github.io/memoryGame/memoryGame.html'">Start Game</button>
         <footer>
-            Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a><br>Music by: <a href ="https://freemusicarchive.org/music/Scott_Holmes/" target="_blank">Scott Holmes</a>
-        </footer>
+            Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a>
     </div>
 </body>
 </html>
