--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="startGame" onclick="window.location.href='https://mattneary1.github.io/memoryGame/memoryGame.html'">Start Game</button>
         <footer>
             Game by: <a href="https://nearygames.com" target="_blank">nearyGames</a>
+        </footer>
     </div>
 </body>
 </html>
